--- a/static/about.Rmd
+++ b/static/about.Rmd
@@ -1,13 +1,14 @@
 ## About this app
 
 This software was developed for the IRAMAT-CRP2A, Université Bordeaux Montaigne (France)
-to analyse Al<sub>2</sub>O<sub>3</sub>:C chip measurements. 
-For all calculations functions from the R package 'Luminescence' are used.
+to analyse Al<sub>2</sub>O<sub>3</sub>:C chip measurements. The analysis assumed that the measurements
+were solely carried out as described in Kreutzer et al. (2018). For all calculations functions from the R package 'Luminescence' are used. 
 
 **Version**: 0.1.0 [2018-06-09]
 
-**Author** Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)
-sebastian.kreutzer@u-bordeaux-montaigne.fr
+**Author**: Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)
+
+**Contact**: sebastian.kreutzer@u-bordeaux-montaigne.fr
   
 ## References to cite
 
