--- a/static/news.Rmd
+++ b/static/news.Rmd
@@ -1,5 +1,10 @@
 ## News and changes
 
+### Version 0.1.3
+* Add option to allow the wheel number assignment based on the file name and not the position number. 
+This in particular helpful if you want to mix different files for one analysis. 
+
+
 ### Version 0.1.2
 * Add Panel 'Settings' with session information and an option to download the calibration data
 * Panel 'Settings': Now supports uploading an own calibration dataset
