--- a/static/news.Rmd
+++ b/static/news.Rmd
@@ -6,6 +6,8 @@ This in particular helpful if you want to mix different files for one analysis.
 * The context menu 'Download to CSV' was not working in the panel 'post-processing' due to an 
 error in the underlying JavaScript code; the workaround presets the columns with 0, which circumvents this 
 error. 
+* Add columns for measurement date, attenuation factor, cosmic dose and corrected dose including 
+the calculation logic in panel 'Post-processing'. 
 
 
 ### Version 0.1.2
