--- a/static/news.Rmd
+++ b/static/news.Rmd
@@ -3,6 +3,7 @@
 ### Version 0.1.8 (2019-04-05)
 #### Bugfixes and changes
 * Panel 'Post-processing': Column 'CV %' was not correct
+* Panel 'Post-processing': Column 'FINAL GAMMA_DR.ERROR [%]' could be negative, corrected
 
 #### User visible changes
 * Panel 'Post-processing' the data aggregation runs automatically if the panel is selected, 
