--- a/static/news.Rmd
+++ b/static/news.Rmd
@@ -1,5 +1,10 @@
 ## News and changes
 
+### Version 0.1.10 (2019-04-18)
+#### Bugfixes and changes
+* The signal integral was not used correctly, resulting in results different from what would 
+be calculated using the R function alone
+
 ### Version 0.1.9 (2019-04-08)
 #### Bugfixes and changes
 * Panel 'Post-processing': Column 'FINAL GAMMA_DR.ERROR [µGy/a]' was not correctly calculated; corrected.
